--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <strong>Your browser does not support the video tag.</strong>
         </video>
         <div class="jb-text">
-          <!-- <h1 class="welcome">Welcome to My Portfolio</h1> -->          
+          <h1 class="welcome">Welcome to My Portfolio</h1>          
           <p class="interaction-d">This is Jungmin, Interaction Designer.</p>
         </div>
       </div>     
