--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </video>
         <div class="jb-text">
           <h1 class="welcome">Welcome to My Portfolio</h1>          
-          <p class="interaction-d">This is Jungmin, Interaction Designer.</p>
+          <h3 class="interaction-d">This is Jungmin, Interaction Designer.</h3>
         </div>
       </div>     
     </div>
@@ -145,7 +145,7 @@
               But what is more important to me is the smooth communication between people through these technologies.<br/> 
               My goal is to bring <strong> joy and communication to people through technology</strong>.</p>
           </div>          
-            <a href="javascript:void(0)" class="btn-learn-more">Go to Resume</a>
+            <a href="/assets/resume2021.pdf" class="btn-learn-more">Go to Resume</a>
           </div>
         </div>
 
@@ -280,105 +280,105 @@
         </ul>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-img"><img src="assets/img/portfolio/interaction_ironman.png" class="img-fluid" alt=""></div>
-            <div class="portfolio-info">
-              <h4>WEB 1</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/interaction_ironman.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="WEB 1"><i class="bx bx-plus"></i></a>
-              <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-              <!-- <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a> -->
-            </div>
-          </div>          
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/portfolio/ux_turf.png" class="img-fluid" alt=""></div>
-            <div class="portfolio-info">
-              <h4>APP 1</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/ux_turf.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="APP 1"><i class="bx bx-plus"></i></a>
-              <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-              <!-- <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a> -->
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/portfolio/UX_vicinity.png" class="img-fluid" alt=""></div>
-            <div class="portfolio-info">
-              <h4>APP 2</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/UX_vicinity.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="APP 2"><i class="bx bx-plus"></i></a>
-              <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-img"><img src="assets/img/portfolio/web_vint.png" class="img-fluid" alt=""></div>
-            <div class="portfolio-info">
-              <h4>WEB 2</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/web_vint.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="WEB 2"><i class="bx bx-plus"></i></a>
-              <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-img"><img src="assets/img/portfolio/web_zengarden.png" class="img-fluid" alt=""></div>
-            <div class="portfolio-info">
-              <h4>WEB 3</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/web_zengarden.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="WEB 3"><i class="bx bx-plus"></i></a>
-              <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>          
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-img"><img src="assets/img/portfolio/graphic_fast.png" class="img-fluid" alt=""></div>
-            <div class="portfolio-info">
-              <h4>GRAPHIC 1</h4>
-              <p>GRAPHIC</p>
-              <a href="assets/img/portfolio/graphic_fast.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="GRAPHIC 1"><i class="bx bx-plus"></i></a>
-              <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>      
           
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-img"><img src="assets/img/portfolio/interaction_final.png" class="img-fluid" alt=""></div>
+            <div class="portfolio-info">
+              <h4>Sound Interactive Art</h4>
+              <p>Web</p>
+              <a href="assets/img/portfolio/interaction_final.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Sound Interactive Art"><i class="bx bx-plus"></i></a>
+              <a href="/sound-interaction.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-img"><img src="assets/img/portfolio/interaction_wall-e.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>WEB 4</h4>
+              <h4>Interactive Animated Art</h4>
               <p>web</p>
-              <a href="assets/img/portfolio/interaction_wall-e.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="WEB 4"><i class="bx bx-plus"></i></a>
-              <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="assets/img/portfolio/interaction_wall-e.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Interactive Animated Art"><i class="bx bx-plus"></i></a>
+              <a href="/wall-e.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img"><img src="assets/img/portfolio/ux_runcovery.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>APP 3</h4>
+              <h4>Running Assistant App</h4>
               <p>App</p>
-              <a href="assets/img/portfolio/ux_runcovery.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="APP 3"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/ux_runcovery.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Running Assistant App"><i class="bx bx-plus"></i></a>
+              <a href="runcovery.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-img"><img src="assets/img/portfolio/web_vint.png" class="img-fluid" alt=""></div>
+            <div class="portfolio-info">
+              <h4>Music Website</h4>
+              <p>Web</p>
+              <a href="assets/img/portfolio/web_vint.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Music Website"><i class="bx bx-plus"></i></a>
               <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-img"><img src="assets/img/portfolio/interaction_final.png" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="assets/img/portfolio/interaction_ironman.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>WEB 5</h4>
+              <h4>Game Development Work</h4>
               <p>Web</p>
-              <a href="assets/img/portfolio/interaction_final.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="WEB 5"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/interaction_ironman.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Game Development Work"><i class="bx bx-plus"></i></a>
+              <!-- <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a> -->
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>          
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-img"><img src="assets/img/portfolio/ux_turf.png" class="img-fluid" alt=""></div>
+            <div class="portfolio-info">
+              <h4>Music Healing App</h4>
+              <p>App</p>
+              <a href="assets/img/portfolio/ux_turf.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Music Healing App"><i class="bx bx-plus"></i></a>
               <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <!-- <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a> -->
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-img"><img src="assets/img/portfolio/graphic_fast.png" class="img-fluid" alt=""></div>
+            <div class="portfolio-info">
+              <h4>Graphic Collage Work</h4>
+              <p>GRAPHIC</p>
+              <a href="assets/img/portfolio/graphic_fast.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Graphic Collage Work"><i class="bx bx-plus"></i></a>
+              <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>   
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-img"><img src="assets/img/portfolio/UX_vicinity.png" class="img-fluid" alt=""></div>
+            <div class="portfolio-info">
+              <h4>Outdoor Play App</h4>
+              <p>App</p>
+              <a href="assets/img/portfolio/UX_vicinity.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Outdoor Play App"><i class="bx bx-plus"></i></a>
+              <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>            
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-img"><img src="assets/img/portfolio/web_zengarden.png" class="img-fluid" alt=""></div>
+            <div class="portfolio-info">
+              <h4>Customized Website</h4>
+              <p>Web</p>
+              <a href="assets/img/portfolio/web_zengarden.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Customized Website"><i class="bx bx-plus"></i></a>
+              <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>         
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img"><img src="assets/img/portfolio/ux_mapsi.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>APP 4</h4>
+              <h4>Fashion Shopping App</h4>
               <p>App</p>
-              <a href="assets/img/portfolio/ux_mapsi.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="APP 4"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/ux_mapsi.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Fashion Shopping App"><i class="bx bx-plus"></i></a>
               <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -386,9 +386,9 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img"><img src="assets/img/portfolio/ux_gorby.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>APP 5</h4>
+              <h4>Smoking Cessation App</h4>
               <p>App</p>
-              <a href="assets/img/portfolio/ux_gorby.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="APP 5"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/ux_gorby.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Smoking Cessation App"><i class="bx bx-plus"></i></a>
               <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -396,9 +396,9 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-img"><img src="assets/img/portfolio/graphic_bauhaus.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>GRAPHIC 2</h4>
+              <h4>Bauhaus Infographic</h4>
               <p>Graphic</p>
-              <a href="assets/img/portfolio/graphic_bauhaus.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="GRAPHIC 2"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/graphic_bauhaus.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Bauhaus Infographic"><i class="bx bx-plus"></i></a>
               <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -406,9 +406,9 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-img"><img src="assets/img/portfolio/drawing-trex.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>DRAWING 1</h4>
+              <h4>3D Blueprint Drawing</h4>
               <p>Drawing</p>
-              <a href="assets/img/portfolio/drawing-trex.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="DRAWING 1"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/drawing-trex.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="3D Blueprint Drawing"><i class="bx bx-plus"></i></a>
               <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -416,9 +416,9 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-img"><img src="assets/img/portfolio/graphic-monster.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>GRAPHIC 3</h4>
+              <h4>Commercial Design</h4>
               <p>GRAPHIC</p>
-              <a href="assets/img/portfolio/graphic-monster.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="GRAPHIC 3"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/graphic-monster.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Commercial Design"><i class="bx bx-plus"></i></a>
               <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -426,9 +426,9 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-img"><img src="assets/img/portfolio/graphic-typography.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>GRAPHIC 4</h4>
+              <h4>Typography Magazine </h4>
               <p>GRAPHIC</p>
-              <a href="assets/img/portfolio/graphic-typography.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="GRAPHIC 4"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/graphic-typography.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Typography Magazine"><i class="bx bx-plus"></i></a>
               <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
