--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
   <!-- Favicons -->
-  <link href="assets/img/favicon_a.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon">  
   <!-- Google Fonts -->  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -226,9 +225,9 @@
               </div>
 
               <div class="progress">
-                <span class="skill">JavaScript <i class="val">65%</i></span>
+                <span class="skill">JavaScript <i class="val">70%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
 
@@ -312,12 +311,22 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-img"><img src="assets/img/portfolio/web_zengarden.png" class="img-fluid" alt=""></div>
+            <div class="portfolio-info">
+              <h4>Customized Website</h4>
+              <p>Web</p>
+              <a href="assets/img/portfolio/web_zengarden.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Customized Website"><i class="bx bx-plus"></i></a>
+              <a href="https://css-zen-garden-updated.netlify.app/" target="_blank" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div> 
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-img"><img src="assets/img/portfolio/web_vint.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Music Website</h4>
               <p>Web</p>
               <a href="assets/img/portfolio/web_vint.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Music Website"><i class="bx bx-plus"></i></a>
-              <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="https://studentpages.scad.edu/~junahn21/jahnprojecta/" target="_blank" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
@@ -343,7 +352,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-img"><img src="assets/img/portfolio/graphic_fast.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Graphic Collage Work</h4>
@@ -351,7 +360,7 @@
               <a href="assets/img/portfolio/graphic_fast.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Graphic Collage Work"><i class="bx bx-plus"></i></a>
               <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
-          </div>   
+          </div>    -->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img"><img src="assets/img/portfolio/UX_vicinity.png" class="img-fluid" alt=""></div>
@@ -361,17 +370,7 @@
               <a href="assets/img/portfolio/UX_vicinity.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Outdoor Play App"><i class="bx bx-plus"></i></a>
               <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
-          </div>            
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-img"><img src="assets/img/portfolio/web_zengarden.png" class="img-fluid" alt=""></div>
-            <div class="portfolio-info">
-              <h4>Customized Website</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/web_zengarden.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Customized Website"><i class="bx bx-plus"></i></a>
-              <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>         
+          </div>                
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img"><img src="assets/img/portfolio/ux_mapsi.png" class="img-fluid" alt=""></div>
@@ -411,17 +410,7 @@
               <a href="assets/img/portfolio/drawing-trex.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="3D Blueprint Drawing"><i class="bx bx-plus"></i></a>
               <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
-          </div>
-          
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-img"><img src="assets/img/portfolio/graphic-monster.png" class="img-fluid" alt=""></div>
-            <div class="portfolio-info">
-              <h4>Commercial Design</h4>
-              <p>GRAPHIC</p>
-              <a href="assets/img/portfolio/graphic-monster.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Commercial Design"><i class="bx bx-plus"></i></a>
-              <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
+          </div>          
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-img"><img src="assets/img/portfolio/graphic-typography.png" class="img-fluid" alt=""></div>
