--- a/runcovery.html
+++ b/runcovery.html
@@ -121,7 +121,7 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                As a research/interactive lead, I studied the beat system of classical music that captivates runners' breathing and speed stabilization.
+                As a research/interaction lead, I studied the beat system of classical music that captivates runners' breathing and speed stabilization.
               </p>
             </div>
           </div>
