--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="swiper-slide">
       <div class="jb-box">
         <video muted autoplay loop>
-          <source src="./assets/Network.mp4" type="video/mp4">
+          <source src="./assets/Ocean.mp4" type="video/mp4">
           <strong>Your browser does not support the video tag.</strong>
         </video>
         <div class="jb-text">
