--- a/etico.html
+++ b/etico.html
@@ -64,41 +64,57 @@
               <div class="scroll-wrapper align-items-center">
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_1.png" alt="">
+                  <img src="assets/img/etico/E_1.png" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_2.png" alt="">
+                  <img src="assets/img/etico/E_2.png" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_3.png" alt="">
+                  <img src="assets/img/etico/E_3.png" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_4.png" alt="">
+                  <img src="assets/img/etico/E_4.png" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_5.png" alt="">
+                  <img src="assets/img/etico/E_5.png" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_6.png" alt="">
+                  <img src="assets/img/etico/E_6.png" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_7.png" alt="">
+                  <img src="assets/img/etico/E_7.png" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_8.png" alt="">
+                  <img src="assets/img/etico/E_8.png" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_9.png" alt="">
+                  <img src="assets/img/etico/E_9.png" alt="">
                 </div>
 
+                <div class="portfolio-items">
+                  <img src="assets/img/etico/E_10.png" alt="">
+                </div>
+
+                <div class="portfolio-items">
+                  <img src="assets/img/etico/E_11.png" alt="">
+                </div>
+
+                <div class="portfolio-items">
+                  <img src="assets/img/etico/E_12.png" alt="">
+                </div>
+
+                <div class="portfolio-items">
+                  <img src="assets/img/etico/E_13.png" alt="">
+                </div>
+                
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -109,15 +125,16 @@
               <h3>Project Information</h3>
               <ul>
                 <li><strong>Category</strong>: UI • UX Design</li>
-                <!-- <li><strong>Course</strong>: Prototyping for Electronics</li> -->
-                <li><strong>Project period</strong>: Jan 2021 - April 2021</li>
-                <li><strong>Vision video</strong>: <a href="https://youtu.be/sZ2kTrvmN1M" class="atag">https://youtu.be/sZ2kTrvmN1M</a></li>
+                <!-- <li><strong>Course</strong>: Individual Work</li> -->
+                <li><strong>Project period</strong>: Jan 2022 - Mar 2022</li>
+                <li><strong>Vision video</strong>: <a href="https://youtu.be/VGGqvuoa3Ns" class="atag">https://youtu.be/VGGqvuoa3Ns</a>
+                </li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                As an interaction leader, I have researched methods and services for overcoming nicotine dependence in adolescents.
+                As a prototyping lead, I commercialized a foldable display menu board, a new concept in the restaurant industry, and researched for sustainable dining services.
               </p>
             </div>
           </div>
@@ -129,14 +146,14 @@
   </main><!-- End #main -->
 
     <!-- ======= Processbook ======= -->
- <footer id="processbook">
+ <!-- <footer id="processbook"> -->
 
   <!-- <div class="container button"> -->
-    <a href="https://drive.google.com/file/d/1WrTKOjW6EmksqWX_QpNsDUJV65qsCGsU/view?usp=sharing" class="hover">
+    <!-- <a href="#" class="hover">
     <div class="button">
       <strong><span>View More</span></strong>
         </div> 
-      </a> 
+      </a>  -->
    
   <!-- </div> -->
   
