--- a/revopay.html
+++ b/revopay.html
@@ -64,39 +64,35 @@
               <div class="scroll-wrapper align-items-center">
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_1.png" alt="">
+                  <img src="assets/img/revopay/P_1.png" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_2.png" alt="">
+                  <img src="assets/img/revopay/P_2.png" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_3.png" alt="">
+                  <img src="assets/img/revopay/P_3.png" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_4.png" alt="">
+                  <img src="assets/img/revopay/P_4.png" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_5.png" alt="">
+                  <img src="assets/img/revopay/P_5.png" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_6.png" alt="">
+                  <img src="assets/img/revopay/P_6.png" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_7.png" alt="">
+                  <img src="assets/img/revopay/P_7.png" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_8.png" alt="">
-                </div>
-
-                <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_9.png" alt="">
+                  <img src="assets/img/revopay/P_8.png" alt="">
                 </div>
 
               </div>
@@ -109,15 +105,15 @@
               <h3>Project Information</h3>
               <ul>
                 <li><strong>Category</strong>: UI • UX Design</li>
-                <!-- <li><strong>Course</strong>: Prototyping for Electronics</li> -->
-                <li><strong>Project period</strong>: Jan 2021 - April 2021</li>
-                <li><strong>Vision video</strong>: <a href="https://youtu.be/sZ2kTrvmN1M" class="atag">https://youtu.be/sZ2kTrvmN1M</a></li>
+                <!-- <li><strong>Course</strong>: Individual Work</li> -->
+                <li><strong>Project period</strong>: Sep 2021 - Dec 2021</li>
+                <li><strong>Vision video</strong>: <a href="https://youtu.be/i6kK_85vGls" class="atag">https://youtu.be/i6kK_85vGls</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                As an interaction leader, I have researched methods and services for overcoming nicotine dependence in adolescents.
+                As a prototyping lead, I led research, prototyping, and usertesting to commercialize cryptocurrency payment concepts.
               </p>
             </div>
           </div>
@@ -126,13 +122,13 @@
       </div>
     </section><!-- End Portfolio Details Section -->
 
-  </main><!-- End #main -->
+  </main><!-- End #main -->  
 
-    <!-- ======= Processbook ======= -->
+   <!-- ======= Processbook ======= -->
  <footer id="processbook">
 
   <!-- <div class="container button"> -->
-    <a href="https://drive.google.com/file/d/1WrTKOjW6EmksqWX_QpNsDUJV65qsCGsU/view?usp=sharing" class="hover">
+    <a href="https://drive.google.com/file/d/17rTt9VilNLRbMhaUsBJnG2ZKDtWxyBUG/view?usp=sharing" class="hover">
     <div class="button">
       <strong><span>View More</span></strong>
         </div> 
