--- a/runcovery.html
+++ b/runcovery.html
@@ -39,7 +39,7 @@
           <li><a href="index.html">Home</a></li>          
           <li>Portfolio Details</li>
         </ol>
-        <h2>Portfolio Details</h2>
+        <h2 class="portfolio-title">Portfolio Details</h2>
 
       </div>
     </section><!-- End Breadcrumbs -->
@@ -113,9 +113,9 @@
               <h3>Project Information</h3>
               <ul>
                 <li><strong>Category</strong>: UX Design</li>
-                <li><strong>Course</strong>: Individual Work</li>
-                <li><strong>Project date</strong>: Fall 2020</li>
-                <li><strong>Project URL</strong>: <a href="#"></a></li>
+                <!-- <li><strong>Course</strong>: Individual Work</li> -->
+                <li><strong>Project period</strong>: Oct 2020 - Dec 2020</li>
+                <!-- <li><strong>Project URL</strong>: <a href="#"></a></li> -->
               </ul>
             </div>
             <div class="portfolio-description">
