--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
     <div class="row content">
       <div class="col-lg-6 left">
         <div class="profile-image">
-          <img src="/assets/img/bg.png" alt="" class="profile-image-b">
+          <!-- <img src="/assets/img/bg.png" alt="" class="profile-image-b"> -->
           <img src="/assets/img/profile-picture.png" alt="" class="profile-image-i" data-aos="fade-right" data-aos-delay="100">              
         </div>
         <div class="profile-bg"></div>            
@@ -92,7 +92,7 @@
           But what is more important to me is the smooth communication between people through these technologies.<br/> 
           My goal is to bring <strong> joy and communication to people through technology</strong>.</p>
       </div>          
-        <a href="/assets/resume2022.pdf" class="btn-learn-more">Go to Resume</a>
+        <a href="/assets/2022_JungminAhn_resume.pdf" class="btn-learn-more">Go to Resume</a>
       </div>
     </div>
 
