--- a/sound-interaction.html
+++ b/sound-interaction.html
@@ -38,7 +38,7 @@
           <li><a href="index.html">Home</a></li>          
           <li>Portfolio Details</li>
         </ol>
-        <h2>Portfolio Details</h2>
+        <h2 class="portfolio-title">Portfolio Details</h2>
 
       </div>
     </section><!-- End Breadcrumbs -->
@@ -108,9 +108,9 @@
               <h3>Project Information</h3>
               <ul>
                 <li><strong>Category</strong>: Sound Interactive Design</li>
-                <li><strong>Course</strong>: ITGM 326</li>
-                <li><strong>Project date</strong>: Winter 2021</li>
-                <li><strong>Project URL</strong>: <a href="#"></a></li>
+                <!-- <li><strong>Course</strong>: ITGM 326</li> -->
+                <li><strong>Project period</strong>: Jan 2021 - Mar 2021</li>
+                <li><strong>Vision video</strong>: <a href="https://youtu.be/jHL_FqqIstI" class="atag">https://youtu.be/jHL_FqqIstI</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
