--- a/gorby.html
+++ b/gorby.html
@@ -7,6 +7,21 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Jungmin Ahn Portfolio</title>
+   <!--Open Graph Property-->
+   <meta property="og:type" content="website" />
+   <meta property="og:site_name" content="Jungmin Ahn's Portfolio" />
+   <meta property="og:title" content="Jungmin Ahn's Portfolio" />
+   <meta property="og:description" content="I'm an interaction designer who pursues sustainable design" />
+   <meta property="og:image" content="/assets/img/portfolio_seo.jpg" />
+   <meta property="og:url" content="jungmin-ahn-portfolio.netlify.app" />
+   <!-- Twitter Card Property -->
+   <meta property="twitter:card" content="summary" />
+   <meta property="twitter:site" content="Jungmin's Portfolio" />
+   <meta property="twitter:title" content="Jungmin's Portfolio" />
+   <meta property="twitter:description" content="I'm an interaction designer who pursues sustainable design" />
+   <meta property="twitter:image" content="/assets/img/portfolio_seo.jpg" />
+   <meta property="twitter:url" content="jungmin-ahn-portfolio.netlify.app" />
+   
   <meta content="" name="description">
   <meta content="" name="keywords">
 
