edit with feedback

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="swiper-slide">
       <div class="jb-box">
         <video muted autoplay loop>
-          <source src="./assets/Ocean.mp4" type="video/mp4">
+          <source src="./assets/Ocean2.mp4" type="video/mp4">
           <strong>Your browser does not support the video tag.</strong>
         </video>
         <div class="jb-text">
@@ -82,13 +82,13 @@
       </div>     
     </div>
     <div class="swiper-slide first">
-      <div class="text-group">
+      <div class="text-group second">
         <h1>I Pursue Sustainable Design.</h1>
-            <h2>This is Jungmin, Interaction Designer.</h2>            
+            <h2 class="interaction-d">This is Jungmin, Interaction Designer.</h2>            
         </div>
     </div>    
     <div class="swiper-slide last">
-      <div class="text-group">
+      <div class="text-group last">
       <h1> Designer Who Visualizes Dreams.</h1>
       <h2>This is Jungmin, Interaction Designer.</h2>
     </div>
