--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           </div>                  
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <a href="vint-sound.netlify.app" alt="vint-sound">
+            <a href="https://vint-sound.netlify.app/" alt="vint-sound">
             <div class="portfolio-img"><img src="assets/img/portfolio/web_vint.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Music Website</h4>
