The second edit in the spring break

--- a/runcovery.html
+++ b/runcovery.html
@@ -51,7 +51,7 @@
       <div class="container">
 
         <ol>          
-          <li><a href="index.html">Home</a></li>          
+          <li><a href="mainportfolio.html">Portfolio</a></li>          
           <li>Portfolio Details</li>
         </ol>
         <h2 class="portfolio-title">Portfolio Details</h2>
@@ -127,7 +127,7 @@
             <div class="portfolio-info">
               <h3>Project Information</h3>
               <ul>
-                <li><strong>Category</strong>: UX Design</li>
+                <li><strong>Category</strong>: UI • UX Design</li>
                 <!-- <li><strong>Course</strong>: Individual Work</li> -->
                 <li><strong>Project period</strong>: Oct 2020 - Dec 2020</li>
                 <!-- <li><strong>Project URL</strong>: <a href="#"></a></li> -->
