--- a/gorby.html
+++ b/gorby.html
@@ -51,7 +51,7 @@
       <div class="container">
 
         <ol>          
-          <li><a href="index.html">Home</a></li>          
+          <li><a href="mainportfolio.html">Portfolio</a></li>          
           <li>Portfolio Details</li>
         </ol>
         <h2 class="portfolio-title">Portfolio Details</h2>
@@ -79,39 +79,39 @@
               <div class="scroll-wrapper align-items-center">
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_1.png" alt="">
+                  <img src="assets/img/gorby/P_1.jpg" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_2.png" alt="">
+                  <img src="assets/img/gorby/P_2.jpg" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_3.png" alt="">
+                  <img src="assets/img/gorby/P_3.jpg" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_4.png" alt="">
+                  <img src="assets/img/gorby/P_4.jpg" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_5.png" alt="">
+                  <img src="assets/img/gorby/P_5.jpg" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_6.png" alt="">
+                  <img src="assets/img/gorby/P_6.jpg" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_7.png" alt="">
+                  <img src="assets/img/gorby/P_7.jpg" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_8.png" alt="">
+                  <img src="assets/img/gorby/P_8.jpg" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_9.png" alt="">
+                  <img src="assets/img/gorby/P_9.jpg" alt="">
                 </div>
 
               </div>
