and edited by counsel

--- a/etico.html
+++ b/etico.html
@@ -139,9 +139,10 @@
             <div class="portfolio-info">
               <h3>Project Information</h3>
               <ul>
-                <li><strong>Category</strong>: UI • UX Design</li>
-                <!-- <li><strong>Course</strong>: Individual Work</li> -->
+                <li><strong>Category</strong>: UI • UX Design</li>                
                 <li><strong>Project period</strong>: Jan 2022 - Mar 2022</li>
+                <li><strong>Team Members</strong>: Jungmin Ahn, Lim Ing, Colin Cheng</li>
+                <li><strong>Role</strong>: Prototyping lead</li>
                 <li><strong>Vision video</strong>: <a href="https://youtu.be/VGGqvuoa3Ns" class="atag">https://youtu.be/VGGqvuoa3Ns</a>
                 </li>
               </ul>
@@ -149,7 +150,8 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                As a prototyping lead, I commercialized a foldable display menu board, a new concept in the restaurant industry, and researched for sustainable dining services.
+                <strong>Etico App</strong> aims to cultivate a digital community of sustainable diners, <br>a platform where the community can identity and support sustainable.
+                <br><br><strong>Etico Menu</strong> aims to enhances the in-house dining experience<br>through interactivity and transparency using digital menu with foldable screens.
               </p>
             </div>
           </div>
