--- a/gorby.html
+++ b/gorby.html
@@ -123,16 +123,18 @@
             <div class="portfolio-info">
               <h3>Project Information</h3>
               <ul>
-                <li><strong>Category</strong>: UI • UX Design</li>
-                <!-- <li><strong>Course</strong>: Prototyping for Electronics</li> -->
+                <li><strong>Category</strong>: UI • UX Design</li>                
                 <li><strong>Project period</strong>: Jan 2021 - April 2021</li>
+                <li><strong>Team Members</strong>: Sara Williams, Anh Tran, Taylor Rosenfeld, Isabella Gonzalez, <br>
+                Jungmin Ahn, Satchel Hallmark, Sullivan Wilcox, Colin Cheng</li>
+                <li><strong>Role</strong>: Interaction lead</li>
                 <li><strong>Vision video</strong>: <a href="https://youtu.be/sZ2kTrvmN1M" class="atag">https://youtu.be/sZ2kTrvmN1M</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                As an interaction leader, I have researched methods and services for overcoming nicotine dependence in adolescents.
+                Gorby aims to help teenagers overcome nicotine dependence through Gorb-E, a wrist device <br>that monitors the body's response to nicotine, and a mobile app service.
               </p>
             </div>
           </div>
@@ -149,7 +151,7 @@
   <!-- <div class="container button"> -->
     <a href="https://drive.google.com/file/d/1WrTKOjW6EmksqWX_QpNsDUJV65qsCGsU/view?usp=sharing" class="hover">
     <div class="button">
-      <strong><span>View More</span></strong>
+      <strong><span>Learn More</span></strong>
         </div> 
       </a> 
    
