--- a/revopay.html
+++ b/revopay.html
@@ -120,15 +120,17 @@
               <h3>Project Information</h3>
               <ul>
                 <li><strong>Category</strong>: UI • UX Design</li>
-                <!-- <li><strong>Course</strong>: Individual Work</li> -->
-                <li><strong>Project period</strong>: Sep 2021 - Dec 2021</li>
+                <!-- <li><strong>Course</strong>: Individual Work</li> -->                
+                <li><strong>Project period</strong>: Sep 2021 - Dec 2021</li>                
+                <li><strong>Team Members</strong>: Erin Mills, Megan Tay, Colin Cheng, Lim Ing, Jungmin Ahn</li>
+                <li><strong>Role</strong>: Prototyping lead</li>
                 <li><strong>Vision video</strong>: <a href="https://youtu.be/i6kK_85vGls" class="atag">https://youtu.be/i6kK_85vGls</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                As a prototyping lead, I led research, prototyping, and user testing to commercialize cryptocurrency payment concepts.
+                Revopay aims to enable small business and consumers to effectively use cryptocurrency and <br>cryptographic technology in real transactions.
               </p>
             </div>
           </div>
@@ -145,7 +147,7 @@
   <!-- <div class="container button"> -->
     <a href="https://drive.google.com/file/d/17rTt9VilNLRbMhaUsBJnG2ZKDtWxyBUG/view?usp=sharing" class="hover">
     <div class="button">
-      <strong><span>View More</span></strong>
+      <strong><span>Learn More</span></strong>
         </div> 
       </a> 
    
