--- a/mainportfolio.html
+++ b/mainportfolio.html
@@ -97,7 +97,7 @@
             <a href="/etico.html" alt="etico">
             <div class="portfolio-img"><img src="assets/img/portfolio/ux_etico.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>Substainable Dining App</h4>
+              <h4>Sustainable Dining App</h4>
               <p>UI • UX</p>
               <!-- <a href="assets/img/portfolio/ux_etico.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Customized Website"><i class="bx bx-plus"></i></a>
               <a href="etico.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a> -->
