--- a/gorby.html
+++ b/gorby.html
@@ -12,14 +12,14 @@
 <meta property="og:site_name" content="Jungmin Ahn's Portfolio" />
 <meta property="og:title" content="Jungmin Ahn's Portfolio" />
 <meta property="og:description" content="I'm an interaction designer who pursues sustainable design" />
-<meta property="og:image" content="/assets/img/portfolio_seo.jpg" />
+<meta property="og:image" content="/assets/img/portfolio_seo.png" />
 <meta property="og:url" content="jungmin-ahn-portfolio.netlify.app" />
 <!-- Twitter Card Property -->
 <meta property="twitter:card" content="summary" />
 <meta property="twitter:site" content="Jungmin's Portfolio" />
 <meta property="twitter:title" content="Jungmin's Portfolio" />
 <meta property="twitter:description" content="I'm an interaction designer who pursues sustainable design" />
-<meta property="twitter:image" content="/assets/img/portfolio_seo.jpg" />
+<meta property="twitter:image" content="/assets/img/portfolio_seo.png" />
 <meta property="twitter:url" content="jungmin-ahn-portfolio.netlify.app" />
    
   <meta content="" name="description">
@@ -79,39 +79,35 @@
               <div class="scroll-wrapper align-items-center">
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_1.jpg" alt="">
+                  <img src="assets/img/gorby/P_1.png" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_2.jpg" alt="">
+                  <img src="assets/img/gorby/P_2.png" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_3.jpg" alt="">
+                  <img src="assets/img/gorby/P_3.png" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_4.jpg" alt="">
+                  <img src="assets/img/gorby/P_4.png" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_5.jpg" alt="">
+                  <img src="assets/img/gorby/P_5.png" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_6.jpg" alt="">
+                  <img src="assets/img/gorby/P_6.png" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_7.jpg" alt="">
+                  <img src="assets/img/gorby/P_7.png" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_8.jpg" alt="">
-                </div>
-
-                <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_9.jpg" alt="">
+                  <img src="assets/img/gorby/P_8.png" alt="">
                 </div>
 
               </div>
